@@ -4,8 +4,8 @@ Authors@R: c(
         person("Aaron", "Lun", role = c("aut", "cre"), email="infinite.monkeys.with.keyboards@gmail.com"),
         person("Davis", "McCarthy", role="aut")
     )
-Version: 1.1.13
-Date: 2021-02-06
+Version: 1.1.14
+Date: 2021-02-13
 License: GPL-3
 Title: Single-Cell RNA-Seq Analysis Utilities
 Description: 
