@@ -1,5 +1,6 @@
 # Generated by roxygen2: do not edit by hand
 
+S3method("[",outlier.filter)
 export(.assignIndicesToWorkers)
 export(.bpNotSharedOrUp)
 export(.guessMinMean)
@@ -39,6 +40,7 @@ export(mockSCE)
 export(normalizeCounts)
 export(numDetectedAcrossCells)
 export(numDetectedAcrossFeatures)
+export(outlier.filter)
 export(perCellQCFilters)
 export(perCellQCMetrics)
 export(perFeatureQCMetrics)
